--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,60 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
+body {
+  background-image: url(../images/background-1239435_1920.jpg);
+  background-repeat: no-repeat;
+  font-family: 'Aleo', serif;
+  font-family: 'Yesteryear', cursive;
+  font-size: 16px;
+  color: white;
+  overflow: hidden;
+}
 
-  body {
-    background-image: url(../images/background-1239435_1920.jpg);
-    background-repeat: no-repeat;
-    font-family: 'Aleo', serif;
-    font-family: 'Yesteryear', cursive;
-    font-size: 16px;
-    color: white;
-    overflow: hidden;
-  }
+.container {
+  height: 95vh;
+  width: 100vw;
+}
 
-  .container {
-    height: 95vh;
-    width: 100vw;
+/* Navigation */
+.nav {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+  display: -ms-flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -o-justify-content: center;
+  -ms-justify-content: center;
+  height: 10%;
+  margin-top: 20;
+}
 
-  }
-
-  /* Navigation */
-  .nav {
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -o-flex;
-    display: -ms-flex;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -o-justify-content: center;
-    -ms-justify-content: center;
-    height: 10%;
-    margin-top: 20;
-  }
-
- .nav .menu {
-        color: white;
-        display: -webkit-flex;
-        display: -moz-flex;
-        display: -o-flex;
-        display: -ms-flex;
-        -webkit-justify-content: center;
-        -moz-justify-content: center;
-        -o-justify-content: center;
-        -ms-justify-content: center;
-        font-family: 'Aleo', serif;
-      }
+.nav .menu {
+  color: white;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+  display: -ms-flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -o-justify-content: center;
+  -ms-justify-content: center;
+  font-family: 'Aleo', serif;
+}
 
 .menu li {
   height: 80%;
-      margin: 20 auto;
-      color: white;
-      display: inline;
-      text-transform: uppercase;
-      padding: 30;
-      text-align: center;
-    }
+  margin: 20 auto;
+  color: white;
+  display: inline;
+  text-transform: uppercase;
+  padding: 30;
+  text-align: center;
+}
 
 .navlinks {
   text-decoration: none;
@@ -68,103 +67,102 @@
   border-radius: 20px;
 }
 
-    #icon img {
-      margin-top: 20px;
-      height: 80%;
-    }
+#icon img {
+  margin-top: 20px;
+  height: 80%;
+}
 
-    .transparent {
-      height: 25%;
-      width: 100%;
-    }
+.transparent {
+  height: 25%;
+  width: 100%;
+}
+
 /* Header */
-    .main {
-      display: -webkit-flex;
-        display: -moz-flex;
-        display: -o-flex;
-        display: -ms-flex;
-      -webkit-justify-content: center;
-      -moz-justify-content: center;
-      -o-justify-content: center;
-      -ms-justify-content: center;
-      -webkit-flex-direction: column;
-      -moz-flex-direction: column;
-      -o-flex-direction: column;
-      -ms-flex-direction: column;
-      height: 82%;
-      width: 100%;
-    }
+.main {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+  display: -ms-flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -o-justify-content: center;
+  -ms-justify-content: center;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -o-flex-direction: column;
+  -ms-flex-direction: column;
+  height: 65%;
+  width: 100%;
+}
 
+h1 {
+  height: 30%;
+  margin: 0 auto 5% auto;
+  font-size: 110px;
+}
 
-    h1 {
-      height: 30%;
-      margin: 0 auto 5% auto;
-      font-size: 110px;
-    }
+.entrydiv {
+  margin: 0 auto;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
 
-    .entrydiv {
-      margin: 0 auto;
-      height: 12%;
-      width: 20%;
-        }
+.btn {
+  border-radius: 40px;
+  font-family: 'Aleo', serif;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bold;
+}
 
-        .btn {
-          border-radius: 40px;
-          font-family: 'Aleo', serif;
-          text-transform: uppercase;
-          color: white;
-          font-weight: bold;
+.btn.entry {
+  width: 40%;
+  height: 10%;
+  border: 1.5px solid white;
+  background-color: transparent;
+}
 
-        }
-
-        .btn.entry {
-          width: 80%;
-          height: 70%;
-          border: 1.5px solid white;
-          background-color: transparent;
-          margin: 0 auto;
-        }
-
-        .entry:hover {
-          background-color: #cc0066;
-        }
+.entry:hover {
+  background-color: #cc0066;
+}
 
 /* Pop-up  */
- .popup {
-   position: relative;
-   display: inline-block;
-   background-color: white;
-   margin: 0 auto;
-   font-family: 'Aleo', serif;
-   width: 22%;
-   height: 55%;
-   z-index: 1;
-   bottom: 50%;
-   left: 40%;
-   margin-left: -80px;
-   visibility: hidden;
- }
+.popup {
+  position: relative;
+  display: inline-block;
+  background-color: white;
+  margin: 0 auto;
+  font-family: 'Aleo', serif;
+  width: 22%;
+  height: 55%;
+  z-index: 1;
+  bottom: 50%;
+  left: 40%;
+  margin-left: -80px;
+  /* visibility: hidden; */
+}
 
- .popcontent {
-   position: absolute;
- }
+.popcontent {
+  position: absolute;
+}
 
 #loginform {
-margin: 0 auto;
-display: -webkit-flex;
-display: -moz-flex;
-display: -o-flex;
-display: -ms-flex;
--webkit-justify-content: center;
--moz-justify-content: center;
--o-justify-content: center;
--ms-justify-content: center;
--webkit-flex-direction: column;
--moz-flex-direction: column;
--o-flex-direction: column;
--ms-flex-direction: column;
- width: 70%;
- height: 100%;
+  margin: 0 auto;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+  display: -ms-flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -o-justify-content: center;
+  -ms-justify-content: center;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -o-flex-direction: column;
+  -ms-flex-direction: column;
+  width: 70%;
+  height: 100%;
 }
 
 #loginform input {
@@ -174,7 +172,6 @@ display: -ms-flex;
   height: 20%;
   border: none;
   text-align: center;
-
 }
 
 .border {
@@ -186,6 +183,7 @@ display: -ms-flex;
   color: black;
   text-align: center;
   font-weight: bold;
+  margin-top: 20;
 }
 
 .btn.log {
@@ -194,102 +192,218 @@ display: -ms-flex;
   border: none;
   background-color: #cc0066;
   margin: 40 auto 20 auto;
-
 }
 
 /* Footer  */
-        .footer {
-          background-color: rgba(0, 0, 0, 0.5);
-          height: 5%;
-          position: absolute;
-          right: 0;
-          bottom: 0;
-          left: 0;
-        }
+.footer {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 5%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
-        #bottom {
-          display: -webkit-flex;
-          display: -moz-flex;
-          display: -o-flex;
-          display: -ms-flex;
-          -webkit-justify-content: space-between;
-          -moz-justify-content: space-between;
-          -o-justify-content: space-between;
-          -ms-justify-content: space-between;
-          list-style: none;
-          height: 100%;
-          font-family: 'Aleo', serif;
-          text-transform: uppercase;
-        }
+#bottom {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+  display: -ms-flex;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -o-justify-content: space-between;
+  -ms-justify-content: space-between;
+  list-style: none;
+  height: 100%;
+  font-family: 'Aleo', serif;
+  text-transform: uppercase;
+}
 
-        #bottom li {
-          margin: 10 auto;
-        }
+#bottom li {
+  margin: 10 auto;
+}
 
 /* MEDIA QUERIES */
-  @media screen and (max-width: 1920px)  {
-
-  }
-        @media screen and (max-width: 768px) {
-
-          .entrydiv {
-            width: 38%;
-          }
-          .popup {
-            width: 33%;
-            height: 50%;
-            z-index: 1;
-            bottom: 50%;
-            left: 40%;
-            margin-left: -77px;
-          }
-        }
-
-        @media screen and (min-width: 425px) and (max-width: 767px) {
-          .menu {
-            margin-top: 40;
-            display: -webkit-flex;
-              display: -moz-flex;
-              display: -o-flex;
-            display: -ms-flex;
-            -webkit-justify-content: center;
-            -moz-justify-content: center;
-            -o-justify-content: center;
-            -ms-justify-content: center;
-            -webkit-flex-direction: column;
-            -moz-flex-direction: column;
-            -o-flex-direction: column;
-            -ms-flex-direction: column;
-          }
-
-          .menu li {
-                height: 20%;
-                margin: 0 auto;
-              }
-
-              #icon {
-                margin-top: 20px;
-                height: 100%;
-              }
-
-          h1 {
-            font-size: 60px;
-          }
-
-          .btn.entry {
-              width: 100%;
-          }
-
-          .footer {
-            font-size: 10px;
-          }
-
-
-        }
-  @media screen and (min-width: 375px) and (max-width: 667px) {
-
+@media (min-width: 320px) and (max-width: 667px) {
+  .menu {
+    margin-top: 40;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -o-flex;
+    display: -ms-flex;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -o-justify-content: center;
+    -ms-justify-content: center;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -o-flex-direction: column;
+    -ms-flex-direction: column;
   }
 
-    @media screen and (max-width: 320px) {
+  .menu li {
+    height: 25%;
+    margin: 0 auto;
+    font-size: 12px;
+  }
 
-    }
+  #icon {
+    margin-top: 20px;
+    height: 100%;
+  }
+
+  h1 {
+    font-size: 44px;
+    text-align: center;
+  }
+
+  .entrydiv {
+    width: 45%;
+  }
+
+  .btn.entry {
+    margin-top: 30;
+    width: 100%;
+  }
+
+  .popup {
+    width: 71%;
+    height: 70%;
+    z-index: 1;
+    bottom: 45%;
+    left: 42%;
+    margin-left: -88px;
+  }
+
+  .footer {
+    font-size: 8px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 667px) {
+  .menu {
+    margin-top: 40;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -o-flex;
+    display: -ms-flex;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -o-justify-content: center;
+    -ms-justify-content: center;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -o-flex-direction: column;
+    -ms-flex-direction: column;
+  }
+
+  .menu li {
+    height: 20%;
+    margin: 0 auto;
+    font-size: 16px;
+  }
+
+  #icon {
+    margin-top: 20px;
+    height: 100%;
+  }
+
+  h1 {
+    font-size: 62px;
+    text-align: center;
+  }
+
+  .entrydiv {
+    width: 45%;
+  }
+
+  .btn.entry {
+    margin-top: 30;
+    width: 100%;
+  }
+
+  .popup {
+    width: 71%;
+    height: 70%;
+    z-index: 1;
+    bottom: 45%;
+    left: 40%;
+    margin-left: -95px;
+  }
+
+  .footer {
+    font-size: 9px;
+  }
+}
+
+@media (min-width: 414px) and (max-width: 736px) {
+  .menu li {
+    font-size: 18px;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+
+  .popup {
+    width: 71%;
+    height: 70%;
+    z-index: 1;
+    bottom: 45%;
+    left: 37%;
+    margin-left: -95px;
+  }
+
+  .footer {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .entrydiv {
+    width: 60%;
+  }
+
+  .popup {
+    width: 40%;
+    height: 70%;
+    z-index: 1;
+    bottom: 45%;
+    left: 40%;
+    margin-left: -95px;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1920px) {
+
+  body {
+    font-size: 24px;
+  }
+
+h1 {
+  font-size: 140px;
+}
+
+.btn {
+  font-size: 22px;
+}
+
+.popup {
+width: 25%;
+height: 70%;
+z-index: 1;
+bottom: 50%;
+left: 40%;
+margin-left: -80px;
+}
+
+#loginform input {
+  font-size: 22px;
+}
+
+.footer {
+  font-size: 20px;
+  padding-top: 8;
+}
+
+}
